// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Products Component can render products 1`] = `
<app-products
  basketService={[Function BasketService]}
  productService={[Function MockProductsService]}
  products={[Function Array]}
>
  <h2>
    Products
  </h2><app-product-detail>
    
  </app-product-detail><div
    class="productsContainer"
  >
    
    <div
      class="productCard"
    >
      <img
        src="url"
      />
      <h3>
        test
      </h3>
      <hr />
      <div>
        <span
          class="productCardPropHeader"
        >
          Color: 
        </span>
        <span
          class="productCardPropValue"
        >
          8
        </span>
      </div>
      <div>
        <span
          class="productCardPropHeader"
        >
          Price 
        </span>
        <span
          class="productCardPropValue"
        >
          8
        </span>
         zl 
      </div>
      <hr />
      <div
        class="productCardFooter"
      >
        <app-button
          id="addToBasketButton-0"
          ng-reflect-text="Add to basket"
          text="Add to basket"
        >
          <button>
             Add to basket
  
          </button>
        </app-button>
      </div>
    </div>
    <div
      class="productCard"
    >
      <img
        src="url"
      />
      <h3>
        test2
      </h3>
      <hr />
      <div>
        <span
          class="productCardPropHeader"
        >
          Color: 
        </span>
        <span
          class="productCardPropValue"
        >
          8
        </span>
      </div>
      <div>
        <span
          class="productCardPropHeader"
        >
          Price 
        </span>
        <span
          class="productCardPropValue"
        >
          4
        </span>
         zl 
      </div>
      <hr />
      <div
        class="productCardFooter"
      >
        <app-button
          id="addToBasketButton-1"
          ng-reflect-text="Add to basket"
          text="Add to basket"
        >
          <button>
             Add to basket
  
          </button>
        </app-button>
      </div>
    </div>
  </div>
</app-products>
`;

exports[`Products Component can select product 1`] = `
<app-products
  basketService={[Function BasketService]}
  product={[Function Product]}
  productService={[Function MockProductsService]}
  products={[Function Array]}
>
  <h2>
    Products
  </h2><app-product-detail
    ng-reflect-product="[object Object]"
  >
    
    <div>
       test2
  
    </div>
  </app-product-detail><div
    class="productsContainer"
  >
    
    <div
      class="productCard"
    >
      <img
        src="url"
      />
      <h3>
        test2
      </h3>
      <hr />
      <div>
        <span
          class="productCardPropHeader"
        >
          Color: 
        </span>
        <span
          class="productCardPropValue"
        >
          8
        </span>
      </div>
      <div>
        <span
          class="productCardPropHeader"
        >
          Price 
        </span>
        <span
          class="productCardPropValue"
        >
          4
        </span>
         zl 
      </div>
      <hr />
      <div
        class="productCardFooter"
      >
        <app-button
          id="addToBasketButton-0"
          ng-reflect-text="Add to basket"
          text="Add to basket"
        >
          <button>
             Add to basket
  
          </button>
        </app-button>
      </div>
    </div>
    <div
      class="productCard"
    >
      <img
        src="url"
      />
      <h3>
        test3
      </h3>
      <hr />
      <div>
        <span
          class="productCardPropHeader"
        >
          Color: 
        </span>
        <span
          class="productCardPropValue"
        >
          8
        </span>
      </div>
      <div>
        <span
          class="productCardPropHeader"
        >
          Price 
        </span>
        <span
          class="productCardPropValue"
        >
          9
        </span>
         zl 
      </div>
      <hr />
      <div
        class="productCardFooter"
      >
        <app-button
          id="addToBasketButton-1"
          ng-reflect-text="Add to basket"
          text="Add to basket"
        >
          <button>
             Add to basket
  
          </button>
        </app-button>
      </div>
    </div>
  </div>
</app-products>
`;

exports[`Products Component should handle with no products 1`] = `
<app-products
  basketService={[Function BasketService]}
  productService={[Function MockProductsService]}
  products={[Function Array]}
>
  <h2>
    Products
  </h2><app-product-detail>
    
  </app-product-detail><div
    class="productsContainer"
  >
    
  </div>
</app-products>
`;
